name:                network-address
version:             0.1.0.0
synopsis:            Retrieve IPv4 and IPv6 network address configuration
description:         Retrieve network interface information on Linux via
                     libnl.
homepage:            https://github.com/ldx/network-address
license:             MIT
license-file:        LICENSE
author:              Vilmos Nebehaj
maintainer:          v.nebehaj@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  ffi/network_info.h,
  ffi/network_info.c,
  README.md

source-repository head
  type:     git
  location: git://github.com:ldx/network-address.git

library
  exposed-modules:    Network.Address
  build-depends:      base >=4.7 && <4.8
  hs-source-dirs:     src
  default-language:   Haskell98
  include-dirs:       ffi
  c-sources:          ffi/network_info.c
  cc-options:         -Wall
  extra-libraries:    nl

test-suite Main
  type:               exitcode-stdio-1.0
  build-depends:
                      base >=4.7 && <4.8,
                      QuickCheck >= 2.4,
                      network-address
  hs-source-dirs:     src, src/Network, tests
  default-language:   Haskell2010
  main-is:            Main.hs
